force-app/main/default/objects/UserLicence__c/UserLicence__c.object-meta.xml
<CustomObject>
    <description>Used to record which users have access to which licences</description>
    <label>User Licence</label>
    <nameField>
        <displayFormat>UL-{000000}</displayFormat>
        <label>User Licence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Licences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>