force-app/main/default/objects/UserLicence__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the assignment of this user to this licence is currently active</description>
    <inlineHelpText>Indicates whether the assignment of this user to this licence is currently active</inlineHelpText>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>