force-app/main/default/objects/UserLicence__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The licence being assigned to this user</description>
    <label>Licence</label>
    <referenceTo>Licence__c</referenceTo>
    <relationshipLabel>User Licences</relationshipLabel>
    <relationshipName>UserLicences</relationshipName>
    <type>Lookup</type>
</CustomField>