force-app/main/default/objects/UserLicence__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user with the licence being assigned</description>
    <inlineHelpText>The user with the licence being assigned</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserLicences</relationshipName>
    <type>Lookup</type>
</CustomField>